# DP5

./: .gitignore  .pre-commit-config.yaml  C_assignment.py  Carbon_assignment.py  Carbon_plotting.py  Carbon_processing.py  ConfPrune.pyx  DP4.py  DP4n.py  DP5.py  Defaultslurm  FCKDE.pkl  FiveConf.py  Gaussian.py  GaussianDarwin.py  GaussianZiggy.py  InchiGen.py  JKDE.pkl  Jaguar.py  Karplus.py  KarplusKDE.pkl  LICENSE  MacroModel.py  Makefile  NMR.py  NMRAnalysis.py  NMRDP4GTF.py  NWChem.py  NucCErr.pkl  NucCErrOpt.pkl  NucHErr.pkl  NucHErrOpt.pkl  P_assignment.py  Proton_Processing_update.py  Proton_assignment.py  Proton_plotting.py  Proton_processing.py  PyDP4.py  PyDP4_GUI.py  PyDP4v1.py  (+26 more)
DP5/: Carbon_plotting.py  DP5.py  Gaussian.py  MacroModel.py  NMR.py  Proton_plotting.py  PyDP4.py  PyDP4_GUI.py  Tinker.py  settings.example
DP5/lib/: Carbon_assignment.py  FiveConf.py  InchiGen.py  MacroModel.py  NMR.py  StructureInput.py  Tinker.py
data/: default.com  default.key
docs/: implementation.md  index.md  info.txt  installation.md  nmr_description_format.md  quickstart.md  setup.md  usage.md
src/dp5/: ConfPrune.py  ConfPrune.pyx  DP5.py  GaussianDarwin.py  GaussianZiggy.py  InchiGen.py  MacroModel.py  NMR.py  NWChem.py  Proton_assignment.py  Proton_processing.py  PyDP4.py  PyDP4_GUI.py  StructureInput.py  Tinker.py  sdftinkerxyzpy.py  settings.example
